[project]
name = "burnin"
version = "1.0.0"
description = "KubeMQ Python SDK burn-in test harness"
requires-python = ">=3.11"
dependencies = [
    "kubemq",
    "pyyaml>=6.0",
    "prometheus-client>=0.20.0",
    "hdrhistogram>=0.10.0",
    "psutil>=5.9.0",
]

[project.scripts]
burnin = "burnin.main:main"

[tool.uv.sources]
kubemq = { path = "..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/burnin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
